@@ -1,3 +1,4 @@
+* Limit to 15 entries in the palette of the back/forward buttons (erikos)
 * Always start at the first toolbar page (erikos)
 
 59
